[FIX] develop branch marge & code modify